--- a/core/src/main/res/layout/fragment_product_realtime.xml
+++ b/core/src/main/res/layout/fragment_product_realtime.xml
@@ -39,8 +39,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:text="@string/product_realtime_title" />
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/price"
@@ -135,6 +134,7 @@
             layout="@layout/view_no_connection"
             app:viewVisibility="@{!networkIsAvailable}"
             tools:layout_height="wrap_content"
-            tools:layout_width="match_parent" />
+            tools:layout_width="match_parent"
+            tools:visibility="gone" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
